--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,54 @@
 /* Mobile Viewport rules */
 @media screen and (max-width: 768px) {
+    /* Set the body to fill the entire viewport */
+    body, html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+    }
+
     #tab-desk {
         display: none;
     }
+    .ocean-backgound {
+        background: linear-gradient(to bottom, #0077b6, #00b4d8, #90e0ef);
+    }
+
+
+
 }
+
+
 
 
 
 /* Media query for tablets */
 @media screen and (min-width: 768px) {
+    /* Set the body to fill the entire viewport */
+    body, html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+    }
+
     .grid-container {
         display: grid;
         grid-template-columns: repeat(3, 1fr); /* Three equal-width columns */
         gap: 20px; /* Gap between columns */
-        }
+    }
+
+    body {
+        background: linear-gradient(#90e0ef, #00b4d8, #0077b6);
+        background-size: cover; /* Ensures the background covers the entire viewport */
+    }
+
+    #fish {
+        width: 50px;
+        height: 50px;
+        background-image: url('images/fish.png'); /* Replace 'fish.png' with your fish icon */
+        background-size: contain;
+        position: absolute;
+        transition: transform 0.1s ease-out; /* Add transition for smooth movement */
+    }
+
 }
