--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,43 @@
-/* Mobile Viewport rules */
-@media screen and (max-width: 768px) {
-    /* Set the body to fill the entire viewport */
-    body, html {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-    }
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
 
-    #tab-desk {
-        display: none;
-    }
-    .ocean-backgound {
-        background: linear-gradient(to bottom, #0077b6, #00b4d8, #90e0ef);
-    }
+h1 {
+    text-align: center;
+}
+p {
+    text-align: center;
+}
 
+.tab-desk {
+    display: none;
+}
 
-
+body {
+    background: linear-gradient(to right, #90e0ef, #00b4d8, #0077b6);
+    background-size: cover; /* Ensures the background covers the entire viewport */
 }
 
 
-
+.fish-image {
+    width: 100%;
+    height: auto; 
+    max-height: 10%; 
+    padding: 20px 0;
+}
 
 
 /* Media query for tablets */
 @media screen and (min-width: 768px) {
+    .mobile {
+        display: none;
+    }
+
+    .tab-desk {
+        display: inline-block;
+    }
     /* Set the body to fill the entire viewport */
     body, html {
         margin: 0;
@@ -37,18 +51,6 @@
         gap: 20px; /* Gap between columns */
     }
 
-    body {
-        background: linear-gradient(#90e0ef, #00b4d8, #0077b6);
-        background-size: cover; /* Ensures the background covers the entire viewport */
-    }
 
-    #fish {
-        width: 50px;
-        height: 50px;
-        background-image: url('images/fish.png'); /* Replace 'fish.png' with your fish icon */
-        background-size: contain;
-        position: absolute;
-        transition: transform 0.1s ease-out; /* Add transition for smooth movement */
-    }
 
 }
