--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,22 @@ h1, h2, p {
     text-align: center;
 }
 
+table {
+    border-collapse: collapse;
+    width: 100%;
+    background-color: #283593; 
+    color: white; 
+    width: 90%; 
+    margin: 20px auto;
+}
+th, td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+}
+th {
+    background-color: #1976d2; /* Lighter blue for header cells */
+}
 
 .tab-desk {
     display: none;
@@ -49,6 +65,21 @@ body {
     background-size: cover; /* Ensures the background covers the entire viewport */
 }
 
+main ul {
+    margin-left: 25%;
+}
+
+footer {
+    background-color: #1976d2;
+    color: white;
+    padding: 10px;
+    margin-top: auto;
+}
+
+iframe {
+    margin: 20px auto; 
+    display: block;
+}
 
 .fish-image {
     width: 100%;
