--- a/styles.css
+++ b/styles.css
@@ -124,10 +124,23 @@ nav {
     color: #2a1f14;
 }
 
+.gallery {
+    display: grid;
+    grid-template-columns: auto auto auto; /* Adjust column width as needed */
+    grid-gap: 40px; /* Adjust gap between images as needed */
+    padding: 5%;
+}
 
+.image {
+    width: 100%; /* Ensure images take full width of their container */
+    height: auto; /* Maintain aspect ratio */
+}
 
-
-
+.image img {
+    width: 100%;
+    height: 100%; /* Ensure the image fills its container */
+    object-fit: cover; /* Ensure the image covers the container without stretching */
+}
 
 /* Media query for tablets */
 @media screen and (min-width: 768px) {
@@ -169,8 +182,6 @@ nav {
         height: 100%;
     }
 
-
-
     .grid-container {
         display: grid;
         grid-template-columns: auto auto auto; 
@@ -195,6 +206,5 @@ nav {
         max-height: 50%;
         height: auto;
         margin: 0 auto
-
     }
 }
