--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,12 @@ footer a {
     text-decoration: none;
 }
 
+video {
+    width: 50%;
+    height: auto;
+    margin: auto 25%;
+  }
+
 .social img {
     display: inline-block;
     padding: 4%;
@@ -98,12 +104,6 @@ iframe {
     display: block;
 }
 
-.fish-image {
-    width: 100%;
-    height: auto; 
-    max-height: 10%; 
-    padding: 20px 0;
-}
 
 .tab-desk {
     display: none;
